fixing navbar on mobile

--- a/styles/body_style.css
+++ b/styles/body_style.css
@@ -8,7 +8,7 @@ html,body
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 70px;
+    padding-top: 70px;
     overflow-x: hidden;
 }
 
